Application is automatically saved with the useless attributes.

--- a/WpfApp1908401/WpfApp1908401.json
+++ b/WpfApp1908401/WpfApp1908401.json
@@ -1,6 +1,3 @@
 {
-  "ServerName": "",
-  "DatabaseName": "Banking_Dev",
-  "DriveBaseName": "",
-  "FolderBaseName": ""
+  "DatabaseName": "Banking_Dev"
 }
