Added menu using Commands

--- a/Tagging/Tagging.csproj
+++ b/Tagging/Tagging.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Commands\MainWindowCommands.cs" />
     <Compile Include="Models\Tag.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
