--- a/Tagging/Tagging.csproj
+++ b/Tagging/Tagging.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DateTimeWeekNumber">
+      <HintPath>..\..\CHiDateTime\DateTimeWeekNumber\bin\Release\DateTimeWeekNumber.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -58,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ModelViews\Tools.cs" />
     <Compile Include="Views\TagIdToDateWindow.xaml.cs">
       <DependentUpon>TagIdToDateWindow.xaml</DependentUpon>
     </Compile>
