--- a/Tagging/Tagging.csproj
+++ b/Tagging/Tagging.csproj
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\EditWindowCommands.cs" />
     <Compile Include="ModelViews\EditTag.cs" />
     <Compile Include="ModelViews\Tools.cs" />
     <Compile Include="Views\EditWindow.xaml.cs">
