Added FilterWindow without the code

--- a/Tagging/Tagging.csproj
+++ b/Tagging/Tagging.csproj
@@ -82,10 +82,17 @@
     <Compile Include="Views\EditWindow.xaml.cs">
       <DependentUpon>EditWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\FilterWindow.xaml.cs">
+      <DependentUpon>FilterWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\TagIdToDateWindow.xaml.cs">
       <DependentUpon>TagIdToDateWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="Views\EditWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FilterWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
